sumo/tests/marouter/errors/false_options/false_net/errors.marouter
Error: The network file 'xxx/input_taz.taz.xml' is not accessible.
Quitting (on error).
